--- a/css/estiloLista.css
+++ b/css/estiloLista.css
@@ -58,7 +58,7 @@ main section div {
 }
 main section div a img{
   width: 100%;
-  max-height: 30vh;
+  height: 30vh;
   display: block;
   margin: 0 auto;
   filter: blur(0.7px);
