--- a/css/estiloLista.css
+++ b/css/estiloLista.css
@@ -66,6 +66,21 @@ main section div a img{
 main section div:hover .oculta{
   opacity: 100;
 }
+.ranking{
+  color: white;
+  padding: 0.5em;
+  text-decoration: none;
+  font-size: 1.5em;
+  position: absolute;
+  top: 1.5vh;
+  right: 0.5vw;
+  transition: all 0.5s;
+  border: 1px solid white;
+}
+.ranking:hover{
+  color: lightgreen;
+  border-color: lightgreen;
+}
 h2{
   font-size: 2em;
   color: white;
